--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,9 @@ lib_deps =
     adafruit/Adafruit ST7735 and ST7789 Library
 
 build_src_filter = +<*.cpp> +<*.h>
+
+; ESP32 OTA upload settings
+; Make sure to replace the upload_port with your ESP32's IP address 
+; Remove both lines if you are not using OTA
+upload_protocol = espota
+upload_port = 192.168.0.16
