--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,12 @@ board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    arduino-libraries/NTPClient
-    adafruit/Adafruit GFX Library
-    adafruit/Adafruit ST7735 and ST7789 Library
-
+	arduino-libraries/NTPClient
+	adafruit/Adafruit GFX Library
+	adafruit/Adafruit ST7735 and ST7789 Library
+	chris--a/Keypad@^3.1.1
 build_src_filter = +<*.cpp> +<*.h>
+
 
 ; ESP32 OTA upload settings
 ; Make sure to replace the upload_port with your ESP32's IP address 
