Enhances LED control and WiFi display updates
Adds brightness control to RGB LED functions and implements new WiFi status update logic with periodic checks. Updates hostname and NTP interval configurations. Removes redundant serial logging and refines display handling for improved clarity. Introduces RGB color setting and time update commands for external control.

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,5 +24,5 @@ build_src_filter = +<*.cpp> +<*.h>
 ; ESP32 OTA upload settings
 ; Make sure to replace the upload_port with your ESP32's IP address 
 ; Remove both lines if you are not using OTA
-; upload_protocol = espota
-; upload_port = 192.168.0.16
+upload_protocol = espota
+upload_port = MoniAuxOTA.local
